Several improvements to the Experiments sections. Clearer CLEVR barcharts, Shorter sentences.

--- a/cvpr_submission/bibliography.bib
+++ b/cvpr_submission/bibliography.bib
@@ -698,5 +698,25 @@
 	pages={7482--7491},
 	year={2018}
 }
+@inproceedings{johnson2017inferring,
+	title={Inferring and executing programs for visual reasoning},
+	author={Johnson, Justin and Hariharan, Bharath and van der Maaten, Laurens and Hoffman, Judy and Fei-Fei, Li and Lawrence Zitnick, C and Girshick, Ross},
+	booktitle={Proceedings of the IEEE International Conference on Computer Vision},
+	pages={2989--2998},
+	year={2017}
+}
 
+@inproceedings{mascharka2018transparency,
+	title={Transparency by design: Closing the gap between performance and interpretability in visual reasoning},
+	author={Mascharka, David and Tran, Philip and Soklaski, Ryan and Majumdar, Arjun},
+	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+	pages={4942--4950},
+	year={2018}
+}
+@inproceedings{perez2018film,
+	title={Film: Visual reasoning with a general conditioning layer},
+	author={Perez, Ethan and Strub, Florian and De Vries, Harm and Dumoulin, Vincent and Courville, Aaron},
+	booktitle={Thirty-Second AAAI Conference on Artificial Intelligence},
+	year={2018}
+}
 @Comment{jabref-meta: databaseType:bibtex;}
