--- a/cvpr_submission/paper_main.tex
+++ b/cvpr_submission/paper_main.tex
@@ -5,6 +5,7 @@
 \usepackage{epsfig}
 \usepackage{graphicx}
 \usepackage{subcaption}
+\setlength{\belowcaptionskip}{-15pt}  % reduce padding below figures
 \usepackage{amsmath, amssymb, amsfonts,bm}
 \usepackage{amsthm}
 
@@ -22,7 +23,7 @@
 
 %\cvprfinalcopy % *** Uncomment this line for the final submission
 
-\def\cvprPaperID{****} % *** Enter the CVPR Paper ID here
+\def\cvprPaperID{7813} % *** Enter the CVPR Paper ID here
 \def\httilde{\mbox{\tt\raisebox{-.5ex}{\symbol{126}}}}
 
 % Pages are numbered in submission mode, and unnumbered in camera-ready
