--- a/cvpr_submission/paper_main.tex
+++ b/cvpr_submission/paper_main.tex
@@ -22,7 +22,7 @@
 
 %\cvprfinalcopy % *** Uncomment this line for the final submission
 
-\def\cvprPaperID{****} % *** Enter the CVPR Paper ID here
+\def\cvprPaperID{7813} % *** Enter the CVPR Paper ID here
 \def\httilde{\mbox{\tt\raisebox{-.5ex}{\symbol{126}}}}
 
 % Pages are numbered in submission mode, and unnumbered in camera-ready
@@ -86,6 +86,12 @@
 % \newcommand{\colorbx}[1]{\medskip\noindent\scalebox{1.05}{\fcolorbox{SaddleBrown}{white}{\color{SteelBlue}{\textbf{#1}}}}}
 
 \newcommand{\Reals}{\mathbb{R}}
+\newcommand{\cD}{\mathcal{D}}
+\newcommand{\cT}{\mathcal{T}}
+\newcommand{\cX}{\mathcal{X}}
+\newcommand{\cY}{\mathcal{Y}}
+\newcommand{\cQ}{\mathcal{Q}}
+\newcommand{\cV}{\mathcal{V}}
 
 \renewcommand{\vec}[1]{\mathbf{#1}}
 \newcommand{\vc}{\vec{c}}
@@ -151,6 +157,8 @@ Thomas J. Watson Research Center, Yorktown Heights, NY 10598, USA\\
 \input{introduction}
 
 \input{related_work}
+
+\input{transfer_learning}
 
 \input{samnet}
 
