--- a/cvpr_submission/samnet.tex
+++ b/cvpr_submission/samnet.tex
@@ -18,7 +18,7 @@
 %The model is also composed of an Image Encoder and a Question Encoder both responsible to pre-process the visual and textual inputs. The output unit is a classifier.
 %All those modules are described below.
 
-\begin{figure*}[!t]
+\begin{figure*}
 	\centering
 	\includegraphics[width=\textwidth]{img/architecture/SAMNETmodel}
 	\caption{General architecture of SAMNet}
