Removed duplicate entries in bib + corrected crop of taxonomy image.

--- a/cvpr_submission/bibliography.bib
+++ b/cvpr_submission/bibliography.bib
@@ -397,6 +397,7 @@
 	author = {Paszke, Adam and Gross, Sam and Chintala, Soumith and Chanan, Gregory and Yang, Edward and DeVito, Zachary and Lin, Zeming and Desmaison, Alban and Antiga, Luca and Lerer, Adam},
 	title  = {Automatic differentiation in {PyTorch}},
 	year   = {2017},
+	journal = {NIPS 2017 Workshop Autodiff}
 }
 
 
@@ -543,13 +544,6 @@
 	year={2016}
 }
 
-@article{kornuta2019leveraging,
-	title={Leveraging Medical Visual Question Answering with Supporting Facts},
-	author={Kornuta, Tomasz and Rajan, Deepta and Shivade, Chaitanya and Asseman, Alexis and Ozcan, Ahmet S},
-	journal={arXiv preprint arXiv:1905.12008},
-	year={2019}
-}
-
 @inproceedings{teney2017graph,
 	title={Graph-structured representations for visual question answering},
 	author={Teney, Damien and Liu, Lingqiao and van den Hengel, Anton},
@@ -623,14 +617,6 @@
 	author={Hudson, Drew A and Manning, Christopher D},
 	journal={arXiv preprint arXiv:1907.03950},
 	year={2019}
-}
-
-@inproceedings{teney2017graph,
-	title={Graph-structured representations for visual question answering},
-	author={Teney, Damien and Liu, Lingqiao and van den Hengel, Anton},
-	booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
-	pages={1--9},
-	year={2017}
 }
 
 @inproceedings{kim2018dynamic,
